// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress measure location inside 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress.pf-m-inside.pf-m-lg {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="inside-progress"
  max={100}
  measureLocation="inside"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="inside-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress pf-m-inside pf-m-lg"
    id="inside-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="inside"
      parentId="inside-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="inside-progress-description"
      />
      <div
        className="pf-c-progress__status"
      />
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            >
              33%
            </span>
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location inside and small should render large 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress.pf-m-inside.pf-m-lg {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="large-progress"
  max={100}
  measureLocation="inside"
  min={0}
  size="sm"
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="large-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress pf-m-inside pf-m-lg"
    id="large-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="inside"
      parentId="large-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="large-progress-description"
      />
      <div
        className="pf-c-progress__status"
      />
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            >
              33%
            </span>
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location none 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="none-progress"
  max={100}
  measureLocation="none"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="none-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress"
    id="none-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="none"
      parentId="none-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="none-progress-description"
      />
      <div
        className="pf-c-progress__status"
      />
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location outside 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress.pf-m-outside {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="outside-progress"
  max={100}
  measureLocation="outside"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="outside-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress pf-m-outside"
    id="outside-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="outside"
      parentId="outside-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="outside-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location top 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="top-progress"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="top-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress"
    id="top-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="top-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="top-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress size lg 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress.pf-m-lg {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="lg-progress"
  max={100}
  measureLocation="top"
  min={0}
  size="lg"
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="lg-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress pf-m-lg"
    id="lg-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="lg-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="lg-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress size md 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="md-progress"
  max={100}
  measureLocation="top"
  min={0}
  size="md"
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="md-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress"
    id="md-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="md-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="md-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress size sm 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress.pf-m-sm {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="sm-progress"
  max={100}
  measureLocation="top"
  min={0}
  size="sm"
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="sm-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress pf-m-sm"
    id="sm-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="sm-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="sm-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress variant danger 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status-icon {
  display: block;
  margin-left: 0.5rem;
  color: #cc0000;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress.pf-m-danger {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="danger-progress"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="danger"
>
  <div
    aria-describedby="danger-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress pf-m-danger"
    id="danger-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="danger-progress"
      title=""
      value={33}
      variant="danger"
    >
      <div
        className="pf-c-progress__description"
        id="danger-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
        <span
          className="pf-c-progress__status-icon"
        >
          <TimesCircleIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                transform=""
              />
            </svg>
          </TimesCircleIcon>
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress variant info 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="info-progress"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="info-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress"
    id="info-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="info-progress"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="info-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress variant success 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status-icon {
  display: block;
  margin-left: 0.5rem;
  color: #cc0000;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress.pf-m-success {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="success-progress"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="success"
>
  <div
    aria-describedby="success-progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress pf-m-success"
    id="success-progress"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="success-progress"
      title=""
      value={33}
      variant="success"
    >
      <div
        className="pf-c-progress__description"
        id="success-progress-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
        <span
          className="pf-c-progress__status-icon"
        >
          <CheckCircleIcon
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                transform=""
              />
            </svg>
          </CheckCircleIcon>
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress with aria-valuetext 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="progress-aria-valuetext"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText="Descriptive text here"
  variant="info"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    aria-valuetext="Descriptive text here"
    className="pf-c-progress"
    id="progress-aria-valuetext"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="progress-aria-valuetext"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="progress-aria-valuetext-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Simple progress 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="progress-simple-example"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="progress-simple-example-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress"
    id="progress-simple-example"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="progress-simple-example"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="progress-simple-example-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`additional label 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="additional-label"
  label="Additional label"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="additional-label-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="pf-c-progress"
    id="additional-label"
    role="progressbar"
  >
    <ProgressContainer
      label="Additional label"
      measureLocation="top"
      parentId="additional-label"
      title=""
      value={33}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="additional-label-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          Additional label
        </span>
      </div>
      <ProgressBar
        className=""
        value={33}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`no value specified 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="no-value"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={0}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="no-value-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="pf-c-progress"
    id="no-value"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="no-value"
      title=""
      value={0}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="no-value-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          0%
        </span>
      </div>
      <ProgressBar
        className=""
        value={0}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "0%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`value higher than maxValue 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="higher-max-value"
  max={60}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={77}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="higher-max-value-description"
    aria-valuemax={60}
    aria-valuemin={0}
    aria-valuenow={60}
    className="pf-c-progress"
    id="higher-max-value"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="higher-max-value"
      title=""
      value={60}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="higher-max-value-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          60%
        </span>
      </div>
      <ProgressBar
        className=""
        value={60}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "60%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`value lower than minValue 1`] = `
.pf-c-progress__description {
  display: block;
  grid-column: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__status {
  display: block;
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.pf-c-progress__measure {
  display: block;
}
.pf-c-progress__indicator {
  display: block;
  position: absolute;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  min-width: 2rem;
  max-width: 100%;
  height: 0.5rem;
  background-color: #cc0000;
}
.pf-c-progress__bar {
  display: block;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
  height: 0.5rem;
  background-color: #ffffff;
}
.pf-c-progress {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;
}

<Progress
  className=""
  id="lower-min-value"
  max={100}
  measureLocation="top"
  min={40}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="info"
>
  <div
    aria-describedby="lower-min-value-description"
    aria-valuemax={100}
    aria-valuemin={40}
    aria-valuenow={40}
    className="pf-c-progress"
    id="lower-min-value"
    role="progressbar"
  >
    <ProgressContainer
      measureLocation="top"
      parentId="lower-min-value"
      title=""
      value={40}
      variant="info"
    >
      <div
        className="pf-c-progress__description"
        id="lower-min-value-description"
      />
      <div
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          40%
        </span>
      </div>
      <ProgressBar
        className=""
        value={40}
      >
        <div
          className="pf-c-progress__bar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "40%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;
